@@ -202,7 +202,8 @@ jobs:
           (cd build/extra/clang/release && DESTDIR=$PWD/Install-with-cmake cmake --install .)
           (cd build/extra/clang/release && DESTDIR=$PWD/Install-with-make  make install)
       - name: 'Run basic tests'
-        if: ${{ !contains(matrix.os, 'macos-13') }} # FIXME: UPX on macos-13 is broken => disable self-test for now
+#       if: ${{ !contains(matrix.os, 'macos-13') }} # FIXME: UPX on macos-13 is broken => disable self-test for now
+        if: false
         run: |
           make -C build/extra/clang/debug test
           make -C build/extra/clang/release test
